src/objects/Support_agency_working_with_client__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support agencies working with client</relationshipLabel>
        <relationshipName>Support_agencies_working_with_client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Clients supported</relationshipLabel>
        <relationshipName>Support_agencies_working_with_client1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_name__c</fullName>
        <formula>text(Contact__r.Salutation) &amp; &apos; &apos; &amp; Contact__r.Full_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_type__c</fullName>
        <formula>text(Contact__r.Contact_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>HYPERLINK(&apos;mailto:&apos;+ Contact__r.Email ,  Contact__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_agency__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Contact__r.AccountId , Contact__r.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_number__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone number</label>
        <type>Text</type>
    </fields>
    <label>Support agency working with client</label>
    <nameField>
        <label>Support Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support agencies working with client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>